--- a/m4d/spotify.html
+++ b/m4d/spotify.html
@@ -14,7 +14,7 @@
     <h1>Spotify Player</h1>
 
     <section id="spotify-player">
-        <iframe src="https://embed.spotify.com/?uri=spotify%3Atrack%3A2VPZMOVWSPVz7AQQj2KcXJ" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+        <iframe src="https://open.spotify.com/embed?uri=spotify%3Atrack%3A2VPZMOVWSPVz7AQQj2KcXJ" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </section>
 
 
